--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon indexai.js"
+    "server": "nodemon index.js"
   },
   "author": "Dhananjay",
   "license": "ISC",
