Added Reset password and email- verification

--- a/server/.env
+++ b/server/.env
@@ -2,8 +2,11 @@ PORT=5009
 EMAIL="passion.auditframework@gmail.com"
 EMAIL_PASSWORD="wyoa itia kcdo gpau"
 JWT_SECRET="g63D0b5E4&fU^E#^q2tE8j5#4Z3Kp7@1"
-CLIENT_URL=http://localhost:3009 
-#CLIENT_URL="https://audit1.passionit.com"
+#CLIENT_URL=http://localhost:3009
+CLIENT_URL="https://audit1.passionit.com"
+ENCRYPTION_KEY="g63D0b5E4&fU^E#^q2tE8j5#4Z3Kp7@1"
+
+
 # PostgreSQL Database Configuration
 DB_USER="postgres"
 DB_HOST=34.71.87.187
