--- a/startupaudit/package.json
+++ b/startupaudit/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "chart.js": "^4.4.4",
+    "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
@@ -19,6 +20,7 @@
     "react-scripts": "5.0.1",
     "react-tag-input": "^6.10.3",
     "react-toastify": "^10.0.5",
+    "serve": "^14.2.3",
     "styled-components": "^6.1.12",
     "web-vitals": "^2.1.4"
   },
